[metadata]
name = pfeifferpumps-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = Unofficial control library and CLI utility for Pfeiffer turbopumps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pfeifferpumps
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyserial >= 3.4
    paho-mqtt >= 1.6.0
    daemonize >= 2.5.0
    lockfile >= 0.12.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pfeiffersniff = pfeifferpumps.pfeiffercli:pfeifferSnifferCLI
